--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <!--<img src="logo.png" alt="">-->
+                    <img src="logo.png" alt="logo">
                 </span>
 
                 <div class="text logo-text">
